unpackaged/main/default/objects/Callback__c/Callback__c.object-meta.xml
<CustomObject>
    <description>Member callback records for road service events</description>
    <label>Callback</label>
    <nameField>
        <label>Callback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>