unpackaged/main/default/objects/Callback__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Parent case that the callback is related to</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Callbacks</relationshipLabel>
    <relationshipName>Callbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>