unpackaged/main/default/objects/Callback__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancel Service</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Escalation Request</fullName>
            </value>
            <value>
                <fullName>ETA Update Request</fullName>
            </value>
            <value>
                <fullName>Membership Issue</fullName>
            </value>
            <value>
                <fullName>Miscellaneous / Question</fullName>
            </value>
            <value>
                <fullName>New Appointment Time</fullName>
            </value>
            <value>
                <fullName>Update Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>