unpackaged/main/default/objects/Callback__c/fields/Created_Case__c.field-meta.xml
<CustomField>
    <fullName>Created_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Callbacks (Created Case)</relationshipLabel>
    <relationshipName>CallbackCreatedCase</relationshipName>
    <type>Lookup</type>
</CustomField>