unpackaged/main/default/objects/Callback__c/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalated To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please choose an active user to escalate to.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Callbacks</relationshipName>
    <type>Lookup</type>
</CustomField>