unpackaged/main/default/objects/Callback__c/fields/Member_Informed__c.field-meta.xml
<CustomField>
    <fullName>Member_Informed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in conjunction with ETA Update category. Checked = Member was informed of ETA, Unchecked = Member needed callback with ETA</description>
    <label>Member Informed</label>
    <type>Checkbox</type>
</CustomField>